Fixed Hamburger Menu, change Collapse BS element for accordion, imgs optimized

--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,16 @@ body {
   min-height: 250px;
 }
 
-.more-info-hover:hover {
+.more-info {
+  background-color: rgba(0, 0, 0, 0);
+  color: silver;
+  border: 0;
+}
+
+.more-info:hover {
   transition-duration: 0.2s;
-  color: blanchedalmond;
+  color: darkgrey;
+  text-decoration: none;
 }
 
 .short-info-sign {
